parser/parser_tests/tests_input/unit/good/Good03.ty
immutable class Student {
    
    values: {}
    
    functions: {}
}
