parser/parser_tests/tests_input/unit/bad/Bad01.ty
mutable class Student {
    
    values:
    
    actions:
    
    variables:
    
    functions:
}
